--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Easy-webdev-startpack",
-  "version": "1.3.0",
-  "description": "HTML5+CSS3 template for easy start website project'",
+  "name": "game-server-landing-page",
+  "version": "0.0.1",
+  "description": "Game server landing page",
   "main": "gulpfile.js",
   "dependencies": {
     "gulp-webpcss": "^1.1.1",
@@ -55,7 +55,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "https://github.com/budfy/Easy-webdev-startpack.git",
+  "repository": "https://github.com/budfy/game-server-landing.git",
   "author": "Roman Serdyuk",
   "license": "ISC",
   "bugs": {
